Prise en compte du texte à côté de la date des journaux afin d'ignorer les "éditions spéciales". + Nouvelle validation pour se protéger contre d'éventuelles entrées avec la même date.